--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 /* Standard elements */
@@ -6,11 +13,21 @@ body {
 	margin: 0px 0px;
 	padding:0px 0px;
 	background-color: #46293F;
+	display:-webkit-box;
+	display:-ms-flexbox;
 	display:flex;
-	flex-direction: column;
-	align-content: flex-start;
-	justify-content:flex-start;
-	column-gap: 0px;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-line-pack: start;
+	    align-content: flex-start;
+	-webkit-box-pack:start;
+	    -ms-flex-pack:start;
+	        justify-content:flex-start;
+	-webkit-column-gap: 0px;
+	   -moz-column-gap: 0px;
+	        column-gap: 0px;
 	overflow-x: hidden;
 }
 
@@ -41,12 +58,16 @@ a {
 	font-size: calc(12px + 1.5vmin);
 	font-weight: bold;
 	color: #fbb954;
-	transition-duration: 0.2s;
+	-webkit-transition-duration: 0.2s;
+	     -o-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 }
 
 a:hover{
 	color: #fb6b1d;
-	transition-duration: 0.3s;
+	-webkit-transition-duration: 0.3s;
+	     -o-transition-duration: 0.3s;
+	        transition-duration: 0.3s;
 }
 
 /* Hero img and wishlist button */
@@ -69,10 +90,15 @@ a:hover{
 	filter: drop-shadow(1vmin 1vmin 0px #46293F);
 	-webkit-filter: drop-shadow(1vmin 1vmin 0px #46293F);
 	text-shadow: 3px 3px 1px #46293F;
-	transition-duration: 0.3s;
-	transition-timing-function: cubic-bezier(.41,0,.3,1.5);
+	-webkit-transition-duration: 0.3s;
+	     -o-transition-duration: 0.3s;
+	        transition-duration: 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(.41,0,.3,1.5);
+	     -o-transition-timing-function: cubic-bezier(.41,0,.3,1.5);
+	        transition-timing-function: cubic-bezier(.41,0,.3,1.5);
 	width: 75vw;
-	box-shadow: 5px 5px 1px #c7dcd0 inset;
+	-webkit-box-shadow: 5px 5px 1px #c7dcd0 inset;
+	        box-shadow: 5px 5px 1px #c7dcd0 inset;
 	font-weight:1000;
 }
 
@@ -85,8 +111,12 @@ a:hover{
 	-webkit-filter: drop-shadow(0vw 0vw 0px #fbb954);
 	border: 0.7vmin solid #fbb954;
 	color: #fbb954;
-	transition-duration: 0.4s;
-	transition-timing-function: ease;
+	-webkit-transition-duration: 0.4s;
+	     -o-transition-duration: 0.4s;
+	        transition-duration: 0.4s;
+	-webkit-transition-timing-function: ease;
+	     -o-transition-timing-function: ease;
+	        transition-timing-function: ease;
 
 }
 #wishlistnow:hover:after {
@@ -100,8 +130,12 @@ a:hover{
 	background: white;
 	color: #e83b3b;
 	text-shadow: 3px 3px 1px #46293F;
-	transition-duration: 0.5s;
-	transition-timing-function: ease;
+	-webkit-transition-duration: 0.5s;
+	     -o-transition-duration: 0.5s;
+	        transition-duration: 0.5s;
+	-webkit-transition-timing-function: ease;
+	     -o-transition-timing-function: ease;
+	        transition-timing-function: ease;
 }
 #wishlistnow:focus:after {
 content: attr(data-active) !important;
@@ -118,10 +152,16 @@ content: attr(data-active) !important;
 	background-position: center;
 	color: red;
 	text-align: center;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	display: -webkit-flex;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	margin-bottom: 0px;
 	padding-bottom: 0px;
 }
@@ -129,14 +169,25 @@ content: attr(data-active) !important;
 /* Bottom logo */
 /* --------- */
 #bothorizontal {
-	transform-origin: top center;
+	-ms-transform-origin: top center;
+	    transform-origin: top center;
 	-webkit-transform-origin: top center;
+	height: -webkit-fit-content;
+	height: -moz-fit-content;
 	height: fit-content;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 	position: relative;
-	transform: translate(0,-20vw);
+	-ms-transform: translate(0,-20vw);
+	    transform: translate(0,-20vw);
 	-webkit-transform: translate(0,-20vw);
 	margin-bottom: 0px;
 	padding-bottom: 0px;
@@ -149,10 +200,19 @@ content: attr(data-active) !important;
 	padding-left: 12.5vw;
 	margin-left: auto;
 	margin-right: auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	z-index: -1000;
 	margin-bottom: 0px;
 	padding-bottom: 0px;
@@ -164,8 +224,12 @@ content: attr(data-active) !important;
 	background-color: #46293F;
 	height: 10vw;
 	width: 100vw;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	bottom: 0;
 	z-index:1001;
 
@@ -181,16 +245,28 @@ content: attr(data-active) !important;
 	top:-15vw;
 	margin-top: 0px;
 	padding-top: 0px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-evenly;
-	align-content: flex-start;	
-	flex-direction: row;
-		flex-wrap: wrap;
+	-webkit-box-pack: space-evenly;
+	    -ms-flex-pack: space-evenly;
+	        justify-content: space-evenly;
+	-ms-flex-line-pack: start;
+	    align-content: flex-start;	
+	-webkit-box-orient: horizontal;	
+	-webkit-box-direction: normal;	
+	    -ms-flex-direction: row;	
+	        flex-direction: row;
+		-ms-flex-wrap: wrap;
+		    flex-wrap: wrap;
 		white-space: nowrap;
 }
 
 .horizontalcontent {
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	padding-left: 15px;
 	padding-right: 15px;
 
@@ -199,9 +275,16 @@ content: attr(data-active) !important;
 #footer{
 	position: relative;
     top:-5vw;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	margin-bottom: 3vmin;
 }
 
