--- a/stylesheet.css
+++ b/stylesheet.css
@@ -196,6 +196,7 @@ content: attr(data-active) !important;
 
 #botlogo {
 	position: relative;
+	height: 248.45vw;
 	width: 75vw;
 	padding-right: 12.5vw;
 	padding-left: 12.5vw;
@@ -238,6 +239,7 @@ content: attr(data-active) !important;
 }
 #logo {
 	z-index:1002;
+	height: 248.45vw;
 }
 /* Bottom content */
 /* --------- */
