--- a/stylesheet.css
+++ b/stylesheet.css
@@ -142,104 +142,207 @@ content: attr(data-active) !important;
 }
 
 /* HeroImg */
-#hero {
-	background-image: url("assets/images/HeroImg.png");
-	background-color: #46293F;
-	background-repeat: no-repeat;
-	height: 95vh;
-	background-size: cover;
-	background-attachment: fixed;
-	background-position: center;
-	color: red;
-	text-align: center;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	display: -webkit-flex;
-	-webkit-box-align: center;
+@media screen and (orientation: portrait){
+	#hero {
+		background-image: url("assets/images/HeroImg.png");
+		background-color: #46293F;
+		background-repeat: no-repeat;
+		height: 95vh;
+		background-size: cover;
+		background-attachment: fixed;
+		background-position: center;
+		color: red;
+		text-align: center;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		display: -webkit-flex;
+		-webkit-box-align: center;
 	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: center;
+	    align-items: center;
+		-webkit-box-pack: center;
 	    -ms-flex-pack: center;
-	        justify-content: center;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-}
+	    justify-content: center;
+		margin-bottom: 0px;
+		padding-bottom: 0px;
+	}
 	
-/* Bottom logo */
-/* --------- */
-#bothorizontal {
-	-ms-transform-origin: top center;
+	/* Bottom logo */
+	/* --------- */
+	#bothorizontal {
+		-ms-transform-origin: top center;
 	    transform-origin: top center;
-	-webkit-transform-origin: top center;
-	height: -webkit-fit-content;
-	height: -moz-fit-content;
-	height: fit-content;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
+		-webkit-transform-origin: top center;
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
+		height: fit-content;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-webkit-box-pack: start;
+		flex-direction: column;
+		-webkit-box-pack: start;
 	    -ms-flex-pack: start;
-	        justify-content: flex-start;
-	position: relative;
-	-ms-transform: translate(0,-20vw);
+		justify-content: flex-start;
+		position: relative;
+		-ms-transform: translate(0,-20vw);
 	    transform: translate(0,-20vw);
-	-webkit-transform: translate(0,-20vw);
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-	height: 20vmax;
-}
+		-webkit-transform: translate(0,-20vw);
+		margin-bottom: 0px;
+		padding-bottom: 0px;
+		height: 20vw;
+	}
 
-#botlogo {
-	position: relative;
-	height: 22.61vw;
-	width: 75vw;
-	padding-right: 12.5vw;
-	padding-left: 12.5vw;
-	margin-left: auto;
-	margin-right: auto;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
+	#botlogo {
+		position: relative;
+		height: 22.61vw;
+		width: 75vw;
+		padding-right: 12.5vw;
+		padding-left: 12.5vw;
+		margin-left: auto;
+		margin-right: auto;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-webkit-box-align: center;
+		flex-direction: column;
+		-webkit-box-align: center;
 	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: center;
+		align-items: center;
+		-webkit-box-pack: center;
 	    -ms-flex-pack: center;
-	        justify-content: center;
-	z-index: -1000;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
+		justify-content: center;
+		z-index: -1000;
+		margin-bottom: 0px;
+		padding-bottom: 0px;
+	}
 
-}
-
-#cutlogo {
-	position: absolute;
-	background-color: #46293F;
-	height: 10vw;
-	width: 100vw;
-	-webkit-box-pack: center;
+	#cutlogo {
+		position: absolute;
+		background-color: #46293F;
+		height: 20vw;
+		width: 100vw;
+		-webkit-box-pack: center;
 	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
+		justify-content: center;
+		-webkit-box-align: center;
 	    -ms-flex-align: center;
-	        align-items: center;
-	bottom: 0;
-	z-index:1001;
-
-
+		align-items: center;
+		bottom: 0;
+		z-index:1001;
+	}
+	#logo {
+		z-index:1002;
+		height: 22.61vwvw;
+		-ms-transform: translate(0,-10vw);
+	    transform: translate(0,-10vw);
+		-webkit-transform: translate(0,-10vw);
+	}
 }
-#logo {
-	z-index:1002;
-	height: 22.61vwvw;
+@media screen and (orientation: landscape){
+	#hero {
+		background-image: url("assets/images/HeroImg.png");
+		background-color: #46293F;
+		background-repeat: no-repeat;
+		height: 95vh;
+		background-size: cover;
+		background-attachment: fixed;
+		background-position: center;
+		color: red;
+		text-align: center;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		display: -webkit-flex;
+		-webkit-box-align: center;
+	    -ms-flex-align: center;
+	    align-items: center;
+		-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	    justify-content: center;
+		margin-bottom: 0px;
+		padding-bottom: 0px;
+	}
+	
+	/* Bottom logo */
+	/* --------- */
+	#bothorizontal {
+		-ms-transform-origin: top center;
+	    transform-origin: top center;
+		-webkit-transform-origin: top center;
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
+		height: fit-content;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+		flex-direction: column;
+		-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+		justify-content: flex-start;
+		position: relative;
+		-ms-transform: translate(0,-20vw);
+	    transform: translate(0,-20vw);
+		-webkit-transform: translate(0,-20vw);
+		margin-bottom: 0px;
+		padding-bottom: 0px;
+		height: 20vw;
+	}
+
+	#botlogo {
+		position: relative;
+		height: 22.61vw;
+		width: 75vw;
+		padding-right: 12.5vw;
+		padding-left: 12.5vw;
+		margin-left: auto;
+		margin-right: auto;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+		flex-direction: column;
+		-webkit-box-align: center;
+	    -ms-flex-align: center;
+		align-items: center;
+		-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+		justify-content: center;
+		z-index: -1000;
+		margin-bottom: 0px;
+		padding-bottom: 0px;
+	}
+
+	#cutlogo {
+		position: absolute;
+		background-color: #46293F;
+		height: 10vw;
+		width: 100vw;
+		-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+		justify-content: center;
+		-webkit-box-align: center;
+	    -ms-flex-align: center;
+		align-items: center;
+		bottom: 0;
+		z-index:1001;
+	}
+	#logo {
+		z-index:1002;
+		height: 22.61vw;
+		-ms-transform: translate(0,0);
+	    transform: translate(0,0);
+		-webkit-transform: translate(0,0);
+	}
 }
 /* Bottom content */
 /* --------- */
