--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,6 +70,13 @@ a:hover{
 	        transition-duration: 0.3s;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 /* Hero img and wishlist button */
 /* ---------------------------- */
 
