--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,458 +1,264 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-
-/* Standard elements */
-/* ----------------- */
-body {
-	margin: 0px 0px;
-	padding:0px 0px;
-	background-color: #46293F;
-	display:-webkit-box;
-	display:-ms-flexbox;
-	display:flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-ms-flex-line-pack: start;
-	    align-content: flex-start;
-	-webkit-box-pack:start;
-	    -ms-flex-pack:start;
-	        justify-content:flex-start;
-	-webkit-column-gap: 0px;
-	   -moz-column-gap: 0px;
-	        column-gap: 0px;
-	overflow-x: hidden;
+body{
+    margin: 0;
+    background-color: #45293f;
 }
 
-h1 {
-	font-family: 'Fredoka One', cursive;
-	font-size: calc(12px + 2vw);
-	font-weight: 500;
-	color: white;
+p{
+    font-size: 16px;
+    font-family: bloggersans;
+    text-align: left;
+    color: #2e222f;
 }
 
-h2 {
-	font-family: 'Fredoka One', cursive;
-	font-size: calc(8px + 1.5min);
-	font-weight: 100;
-	color: white;
-	text-align: center;
+a{
+    font-size: 16px;
+    font-family: bloggersans;
+    font-weight: bold;
+    color: #45293f;
+    border: 1px #e6904e;
+    border-style: none none solid none;
+    text-decoration: none;
 }
-
-p {
-	font-family: 'Quicksand', sans-serif;
-	font-size: calc(12px + 1.5vmin);
-	font-weight: 200;
-	color: white;
-}
-
-a {
-	font-family: 'Quicksand', sans-serif;
-	font-size: calc(12px + 1.5vmin);
-	font-weight: bold;
-	color: #fbb954;
-	-webkit-transition-duration: 0.2s;
-	     -o-transition-duration: 0.2s;
-	        transition-duration: 0.2s;
-}
-
 a:hover{
-	color: #fb6b1d;
-	-webkit-transition-duration: 0.3s;
-	     -o-transition-duration: 0.3s;
-	        transition-duration: 0.3s;
+    border: 2px #9e4539;
+    border-style: none none solid none;
+    color: #2e222f;
 }
 
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-
+h1{
+    font-family: bloggersans;
 }
 
-/* Hero img and wishlist button */
-/* ---------------------------- */
-
-/* Wishlist button */
-#wishlistnow {
-	z-index: 10;
-	text-decoration: none;
-	top: 50%;
-	margin-bottom: 20%;
-	color: #fbb954;
-	font-size: calc(20px + 3vmax);
-	background: #fff;
-	backdrop-filter: blur(5px);
-	-webkit-backdrop-filter: blur(5px);
-	padding: 1vmin;
-	border-radius: 3vmin;
-	font-family: 'Fredoka One', cursive;
-	font-weight: bold;
-	border: 1.2vmin solid #46293F;
-	filter: drop-shadow(1vmin 1vmin 0px #46293F);
-	-webkit-filter: drop-shadow(1vmin 1vmin 0px #46293F);
-	/* text-shadow: 3px 3px 1px #46293F; */
-	-webkit-transition-duration: 0.3s;
-	     -o-transition-duration: 0.3s;
-	        transition-duration: 0.3s;
-	-webkit-transition-timing-function: cubic-bezier(.41,0,.3,1.5);
-	     -o-transition-timing-function: cubic-bezier(.41,0,.3,1.5);
-	        transition-timing-function: cubic-bezier(.41,0,.3,1.5);
-	width: 75vw;
-	-webkit-box-shadow: 5px 5px 1px #c7dcd0 inset;
-	        box-shadow: 5px 5px 1px #c7dcd0 inset;
-	font-weight:1000;
-	 display: inline-block;
+h2{
+    font-family: bloggersans;
+    font-size: 52px;
+    margin-top: 0;
+    margin-bottom: 16px;
+    color: #2e222f;
 }
 
-#wishlistnow:after{
-	content: attr(data-default);
+h3{
+    font-family: bloggersans;
+    font-size: 33px;
+    margin-top: 0;
+    margin-bottom: 16px;
+    color: #2e222f;
 }
 
-#wishlistnow:hover {
-	filter: drop-shadow(0vw 0vw 0px #fbb954);
-	-webkit-filter: drop-shadow(0vw 0vw 0px #fbb954);
-	border: 0.7vmin solid #fbb954;
-	color: #fbb954;
-	-webkit-transition-duration: 0.4s;
-	     -o-transition-duration: 0.4s;
-	        transition-duration: 0.4s;
-	-webkit-transition-timing-function: ease;
-	     -o-transition-timing-function: ease;
-	        transition-timing-function: ease;
+.section {
+    min-width: 960px;
+    max-width: 1140px;
+    margin: auto;
+    text-align: center;
 
 }
-#wishlistnow:hover:after {
-	content:none !important;
-	content:attr(data-hover)!important;
+.divider{
+    left: 0;
+    width: 100%;
+    line-height: 0;
+    top: calc(56.24vw - 48px);
+    -ms-transform: translateY(calc(56.24vw - 48px));
+    transform: translateY(calc(56.24vw - 13vw));
+    background-image: url(assets/PurpleDivider.png);
+    background-repeat: repeat-x;
+    
 }
-#wishlistnow:focus {
-	filter: drop-shadow(0vmin 0vmin 0px #7f708a);
-	-webkit-filter: drop-shadow(0vmin 0vmin 0px #7f708a);
-	border: 1vmin solid #e83b3b;
-	background: white;
-	color: #e83b3b;
-	text-shadow: 3px 3px 1px #46293F;
-	-webkit-transition-duration: 0.5s;
-	     -o-transition-duration: 0.5s;
-	        transition-duration: 0.5s;
-	-webkit-transition-timing-function: ease;
-	     -o-transition-timing-function: ease;
-	        transition-timing-function: ease;
-}
-#wishlistnow:focus:after {
-content: attr(data-active) !important;
+.columns {
+    display: flex;
+    flex-direction: row;
 }
 
-/* HeroImg */
-@media screen and (orientation: portrait){
-	#hero {
-		background-image: url("assets/images/HeroImg.png");
-		background-color: #46293F;
-		background-repeat: no-repeat;
-		height: 95vh;
-		background-size: cover;
-		background-attachment: scroll;
-		background-position: center;
-		color: red;
-		text-align: center;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		display: -webkit-flex;
-		-webkit-box-align: center;
-	    -ms-flex-align: center;
-	    align-items: center;
-		-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	    justify-content: center;
-		margin-bottom: 0px;
-		padding-bottom: 0px;
-	}
-	
-	/* Bottom logo */
-	/* --------- */
-	#bothorizontal {
-		-ms-transform-origin: top center;
-	    transform-origin: top center;
-		-webkit-transform-origin: top center;
-		height: -webkit-fit-content;
-		height: -moz-fit-content;
-		height: fit-content;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-		flex-direction: column;
-		-webkit-box-pack: start;
-	    -ms-flex-pack: start;
-		justify-content: flex-start;
-		position: relative;
-		-ms-transform: translate(0,-20vw);
-	    transform: translate(0,-20vw);
-		-webkit-transform: translate(0,-20vw);
-		margin-bottom: 0px;
-		padding-bottom: 0px;
-		height: 30vw;
-	}
-
-	#botlogo {
-		position: relative;
-		height: 22.61vw;
-		width: 75vw;
-		padding-right: 12.5vw;
-		padding-left: 12.5vw;
-		margin-left: auto;
-		margin-right: auto;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-		flex-direction: column;
-		-webkit-box-align: center;
-	    -ms-flex-align: center;
-		align-items: center;
-		-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-		justify-content: center;
-		z-index: 1;
-		margin-bottom: 0px;
-		padding-bottom: 0px;
-	}
-
-	#cutlogo {
-		position: absolute;
-		background-color: #46293F;
-		height: 35vw;
-		width: 100vw;
-		-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-		justify-content: center;
-		-webkit-box-align: center;
-	    -ms-flex-align: center;
-		align-items: center;
-		bottom: 0;
-		z-index:1;
-	}
-	#logo {
-		z-index:5;
-		height: 22.61vwvw;
-		-ms-transform: translate(0,-25vw);
-	    transform: translate(0,-25vw);
-		-webkit-transform: translate(0,-25vw);
-	}
-
-	.center { 
-		width: 75vw;
-	}
-
-	#bottom {
-		top: -40vw;
-	}
+.halfcolumn{
+    text-align: left;
+    width: 50%;
+    padding: 24px;
+    margin: 24px;
+    border-radius: 16px;
+    /*border: 2px solid #2e222f;
+    background-color: #c7dcd0;*/
 }
-@media screen and (orientation: landscape){
-	#hero {
-		background-image: url("assets/images/HeroImg.png");
-		background-color: #46293F;
-		background-repeat: no-repeat;
-		height: 95vh;
-		background-size: cover;
-		background-attachment: fixed;
-		background-position: center;
-		color: red;
-		text-align: center;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		display: -webkit-flex;
-		-webkit-box-align: center;
-	    -ms-flex-align: center;
-	    align-items: center;
-		-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	    justify-content: center;
-		margin-bottom: 0px;
-		padding-bottom: 0px;
-	}
-	
-	/* Bottom logo */
-	/* --------- */
-	#bothorizontal {
-		-ms-transform-origin: top center;
-	    transform-origin: top center;
-		-webkit-transform-origin: top center;
-		height: -webkit-fit-content;
-		height: -moz-fit-content;
-		height: fit-content;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-		flex-direction: column;
-		-webkit-box-pack: start;
-	    -ms-flex-pack: start;
-		justify-content: flex-start;
-		position: relative;
-		-ms-transform: translate(0,-20vw);
-	    transform: translate(0,-20vw);
-		-webkit-transform: translate(0,-20vw);
-		margin-bottom: 0px;
-		padding-bottom: 0px;
-		height: 20vw;
-	}
-
-	#botlogo {
-		position: relative;
-		height: 22.61vw;
-		width: 75vw;
-		padding-right: 12.5vw;
-		padding-left: 12.5vw;
-		margin-left: auto;
-		margin-right: auto;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-		flex-direction: column;
-		-webkit-box-align: center;
-	    -ms-flex-align: center;
-		align-items: center;
-		-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-		justify-content: center;
-		z-index: 1;
-		margin-bottom: 0px;
-		padding-bottom: 0px;
-	}
-
-	#cutlogo {
-		position: absolute;
-		background-color: #46293F;
-		height: 10vw;
-		width: 100vw;
-		-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-		justify-content: center;
-		-webkit-box-align: center;
-	    -ms-flex-align: center;
-		align-items: center;
-		bottom: 0;
-		z-index:1;
-	}
-	#logo {
-		z-index:5;
-		height: 22.61vw;
-		-ms-transform: translate(0,0);
-	    transform: translate(0,0);
-		-webkit-transform: translate(0,0);
-	}
-
-	.center { 
-		width: 50vw;
-
-	}
-
-	#bottom{
-	top: -15vw;
-	}
+.thirdcolumn-container{
+    min-width: 960px;
+    max-width: 1092px;
+    column-count: 5;
+    column-gap: 5%; 
+    margin: auto;
 }
-/* Bottom content */
-/* --------- */
-#bottom {
-	position: relative;
-
-	margin-top: 0px;
-	padding-top: 0px;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: space-evenly;
-	    -ms-flex-pack: space-evenly;
-	        justify-content: space-evenly;
-	-ms-flex-line-pack: start;
-	    align-content: flex-start;	
-	-webkit-box-orient: horizontal;	
-	-webkit-box-direction: normal;	
-	    -ms-flex-direction: row;	
-	        flex-direction: row;
-		-ms-flex-wrap: wrap;
-		    flex-wrap: wrap;
-		white-space: nowrap;
+.four-columns{
+    
+    max-width: 844px;
+    column-count: 4;
+    column-gap: 5%; 
 }
 
-.horizontalcontent {
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	padding-left: 15px;
-	padding-right: 15px;
+.platform-button{
+    background-color: transparent;
+    border: 0;
+    height: 56px;
+}
 
+.platform-button-image{
+    filter: invert(100%) saturate(0%) brightness(100);
+    height: 100%;
+}
+
+.employee-picture{
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 16px;
+    border: 4px solid ;
+}
+
+.contact-button{
+    background-color: transparent;
+    aspect-ratio: 1 / 1;
+    width: 64px;
+    border: none;
+    margin: 8px;
+    border-radius: 8px;
+}
+.contact-button:hover{
+    background-color: #e6904e;
+}
+.contact-button-image{
+    aspect-ratio: 1 / 1;
+    width: 100%;
+
+    
+}
+#hero{
+    background-image: url(assets/HeroImg.png);
+    background-size: cover;
+    box-shadow: inset 0px -64px 60px #2e222f;
+    width: 100vw;
+    height: calc(56.24vw - 10vw);
+    margin: auto;
+    text-align: center;
+    position: relative;
+}
+
+#game-description{
+    background-color: #fbb954;
+    color: white;
+}
+
+#game-galary{
+    aspect-ratio: 16/9;
+    background-position: center;
+    border: 4px solid #2e222f;
+    background-color: #c7dcd0;
+}
+
+#company-description{
+    background-color: #c7dcd0;
+}
+
+#socials{
+    background-color: #fbb954;
 }
 
 #footer{
-	position: relative;
-
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	margin-bottom: 3vmin;
+    padding-top: 24px;
+    padding-bottom: 16px;
+    background-color: #fbb954;
 }
 
-/* Scrollbar */
-/* --------- */
-/* width */
-::-webkit-scrollbar {
-  width: 15px;
-}
-/* Track */
-::-webkit-scrollbar-track {
-  background: #694f62;
-  border-style: none;
+#wishlistbutton {
+    top: -8px;
+    -ms-transform: translateY(-8px);
+    transform: translateY(-8px);
+
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #46293F;
-  border-color: #46293F;
-  border-width: 2px;
-  border-style: none;
-  border-top-style: solid;
-  border-bottom-style: solid;
-  border-radius: 20px;
+#wishlist-platforms {
+    top: -80px;
+    right: -24px;
+    -ms-transform: translate(-24px, -80px);
+    transform: translate(-24px, -80px);
+    margin: auto;
+    text-align: end;
+    max-width: 1140px;
+    font-family: bloggersans;
+    background-
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #fbb954;
-  border-color: #fbb954;
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(69,41,63,0.9);
+  z-index: 2;
+  cursor: pointer;
 }
 
-iframe {
-	border-style: none;
+#overlay-element{
+    position: fixed;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.fullscreen-button{
+    background-color: transparent;
+    font-size: 32px;
+    border: 1px #cd683d;
+    border-style: dashed none dashed none;
+    padding: 0;
+    font-family: bloggersans;
+    font-weight: 800;
+    color:#ffffff;
+    width: 100%;
+    height: 94px;
+    cursor: pointer;
+}
+
+.fullscreen-button:hover:after{
+    content: 'Join Our Newsletter! 💌';
+    text-decoration: underline;
+    
+}
+
+#newsletter-button {
+    text-shadow: 1px 1px 5px #9e4539;
+}
+#newsletter-button:hover{
+    border: 2px #cd683d;
+    border-style: solid none solid none;
+}
+#newsletter-button:after{
+    content:'Join Our Newsletter! ✉️';
+}
+#newsletter-button:hover:after{
+    content: 'Join Our Newsletter! 💌';
+    
+}
+
+#wishlistbutton{
+    text-shadow: 1px 1px 5px #2e222f;
+    border-color: #6b3e75;
+}
+#wishlistbutton:hover{
+    border: 2px #6b3e75;
+    border-style: solid none solid none;
+}
+#wishlistbutton:after{
+    content:'Wishlist Now! 🤍';
+}
+#wishlistbutton:hover:after{
+    content:'Wishlist Now! ❤️';
+}
+
+
+
+
+@font-face {
+    font-family: "bloggersans";
+    src: url("assets/Blogger_Sans.ttf");
 }
