--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,8 +79,9 @@ h3{
     /*border: 2px solid #2e222f;
     background-color: #c7dcd0;*/
 }
-.thirdcolumn-container{
-    min-width: 960px;
+.five-column-container{
+    width: calc(100% - 48px);
+    min-width: calc(960px - 48px);
     max-width: 1092px;
     column-count: 5;
     column-gap: 5%; 
@@ -132,7 +133,7 @@ h3{
 #hero{
     background-image: url(assets/HeroImg.png);
     background-size: cover;
-    box-shadow: inset 0px -64px 60px #2e222f;
+    box-shadow: inset 0 -64px 60px #2e222f;
     width: 100vw;
     height: calc(56.24vw - 10vw);
     margin: auto;
@@ -182,7 +183,6 @@ h3{
     text-align: end;
     max-width: 1140px;
     font-family: bloggersans;
-    background-
 }
 
 #overlay {
@@ -256,11 +256,78 @@ h3{
 #wishlistbutton:hover:after{
     content:'Wishlist Now! ❤️';
 }
-
+#CcgLogo{
+    width: 75%; 
+    margin: auto; 
+    display: block;
+}
 
 
 
 @font-face {
     font-family: "bloggersans";
     src: url("assets/Blogger_Sans.ttf");
+}
+
+@media only screen and (max-width: 960px){
+    
+    h3{
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    h2{
+        text-align: center;
+        padding-bottom: 0;
+    }
+    
+    .section{
+        min-width: 100%;
+    }
+    
+    
+    .divider{
+        top: calc(56.24vw - 48px);
+        -ms-transform: translateY(calc(56.24vw - 48px));
+    transform: translateY(calc(56.24vw - 48px));
+    }
+    
+    .halfcolumn{ 
+        width: calc(100vw - 112px);
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+    
+    .five-column-container{
+        min-width: calc(100% - 48px);
+        column-count: 2;
+        
+        
+    }
+    
+    .columns {
+    display: flex;
+    flex-direction: column;
+    min-width: 100%;
+    }
+    .employee-picture{
+        min-width: 100%;
+    }
+    .employee-description{
+        width: calc(50vw - 84px);
+        margin: auto;
+        padding-bottom: 16px;
+        max-width: 100%;
+        -webkit-column-break-inside: avoid;
+        page-break-inside: avoid;
+        break-inside: avoid;
+    }
+    #hero{
+        height: 56.24vw;
+    }
+    #CcgLogo{
+        width: 25vw;
+    }
+    
+    
+    
 }
