Tried fix for mobile detection of vertical layout

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -269,7 +269,7 @@ h3{
     src: url("assets/Blogger_Sans.ttf");
 }
 
-@media only screen and (max-width: 960px){
+@media (max-width: 960px){
     
     h3{
         padding-bottom: 0;
